--- a/RandomQuotes/styles.css
+++ b/RandomQuotes/styles.css
@@ -5,4 +5,27 @@ font-family: 'Syne', sans-serif; */
 
 body {
   background-color: whitesmoke;
+  height: 100vh;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: solid 1px red;
+  height: 100vh;
+
+}
+
+.content {
+  border: solid 1px blue;
+  background-color: lightblue;
+  width: 60%;
+  padding: 200px;
 }
