added css styling to content box

--- a/RandomQuotes/styles.css
+++ b/RandomQuotes/styles.css
@@ -4,8 +4,11 @@
 font-family: 'Syne', sans-serif; */
 
 body {
+  font-family: 'Inter', sans-serif;
   background-color: whitesmoke;
   height: 100vh;
+  line-height: 1.4;
+  transition: background-color 1s ease;
 }
 
 .container {
@@ -18,14 +21,31 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: solid 1px red;
   height: 100vh;
 
 }
 
 .content {
-  border: solid 1px blue;
-  background-color: lightblue;
-  width: 60%;
-  padding: 200px;
+  width: 50%;
+  /* padding: 100px; */
+}
+
+button {
+  margin-bottom: 20px;
+}
+
+p,
+h1 {
+  margin-bottom: 8px;
+
+}
+
+p {
+  font-family: 'Syne', sans-serif; 
+  font-size: 40px;
+}
+
+h1 {
+  font-family: 'Inter', sans-serif;
+  text-align: right;
 }
