--- a/profile-card-component-main/styles.css
+++ b/profile-card-component-main/styles.css
@@ -3,13 +3,37 @@
 /* font-family: 'Kumbh Sans', sans-serif; */
 
 div * {
-  border: solid 1px red;
+  /* border: solid 1px red; */
 }
 
 body {
   font-family: 'Kumbh Sans', sans-serif;
   width: 1440px;
   margin: 0 auto;
+  /* background-image: url(/images/bg-pattern-card.svg); */
+  background-color:hsl(185, 75%, 39%);
+  height: 100vh;
+}
+
+body::before {
+  content: "";
+  background: url(/images/bg-pattern-top.svg) no-repeat right top;
+  display: block;
+  position: relative;
+  height: 300px;
+  transform: rotateX(-185deg);
+  left: -680px;
+}
+
+
+footer::before {
+  content: "";
+  background: url(/images/bg-pattern-bottom.svg) no-repeat right top;
+  display: block;
+  position: relative;
+  height: 300px;
+  transform: rotateX(-355deg);
+  left: 380px;
 }
 
 
@@ -19,7 +43,11 @@ div.card {
   margin: 150px auto;
   width: 300px;
   text-align: center;
-  border: solid 2px green;
+  /* border: solid 2px green; */
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 25px;
+
 
 }
 
@@ -27,6 +55,8 @@ div.bg {
   background-image: url(/images/bg-pattern-card.svg);
   width: 100%;
   height: 10vh;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
 }
 
 div.card img {
@@ -44,6 +74,24 @@ div.user {
   
 }
 
+
+
+.name,
+.stats {
+  font-weight: 700;
+  color: hsl(229, 23%, 23%)
+}
+
+.age {
+  margin-left: 8px;
+}
+
+.age,
+.location {
+  color: hsl(0, 0%, 59%);
+  font-weight: 500;
+}
+
 .location::after {
   content: "";
   display: block;
@@ -59,15 +107,13 @@ div.social {
   display: flex;
   justify-content: center;
   gap: 24px;
-  margin: 24px;
+  padding: 24px;
 }
 
-.stats {
-  font-weight: 700;
-}
+
 
 .stat-subtitle {
   font-size: 12px;
   font-weight: 200;
-
+  margin-top: 4px;
 }
