--- a/testimonials-grid-section-main/styles.css
+++ b/testimonials-grid-section-main/styles.css
@@ -18,5 +18,26 @@
   --mobile-body-copy: 13px;
 
   --font-manrope: 'Manrope', sans-serif;
+  --font-barlow: 'Barlow Semi Condensed', sans-serif
 
+}
+
+body {
+  font-family: var(--font-manrope);
+
+}
+
+
+.client-container {
+  display: flex;
+  align-items: center;
+}
+
+.client-container img {
+  border-radius: 50%;
+}
+
+.client-subheader {
+  font-family: var(--font-barlow);
+  font-size: 32px;
 }
