--- a/testimonials-grid-section-main/styles.css
+++ b/testimonials-grid-section-main/styles.css
@@ -27,6 +27,35 @@ body {
 
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 200px, 250px;
+  grid-auto-rows: minmax(150px, auto);
+  grid-gap: 20px;
+  grid-template-areas: 
+    "card-1 card-1 card-2 card-5"
+    "card-3 card-4 card-4 card-5";
+}
+
+.card-1 {
+  grid-area: card-1;
+}
+
+.card-2 {
+  grid-area: card-2;
+}
+
+.card-3 {
+  grid-area: card-3;
+}
+
+.card-4 {
+  grid-area: card-4;
+}
+
+.card-5 {
+  grid-area: card-5;
+}
 
 .client-container {
   display: flex;
