--- a/testimonials-grid-section-main/styles.css
+++ b/testimonials-grid-section-main/styles.css
@@ -24,12 +24,13 @@
 
 body {
   font-family: var(--font-manrope);
-
+  line-height: 1.4;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: 200px, 250px;
+  /* grid-template-columns: 200px, 250px; */
+  grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: minmax(150px, auto);
   grid-gap: 20px;
   grid-template-areas: 
@@ -57,9 +58,23 @@ body {
   grid-area: card-5;
 }
 
+.card {
+  background-color: lightgray;
+  padding: 24px;
+  border-radius: 8px;
+}
+
 .client-container {
   display: flex;
   align-items: center;
+}
+
+.client-detail {
+  margin-left: 16px;
+}
+
+.client-name {
+  font-weight: 600;
 }
 
 .client-container img {
@@ -68,5 +83,8 @@ body {
 
 .client-subheader {
   font-family: var(--font-barlow);
-  font-size: 32px;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 1.1;
+  margin: 16px 0;
 }
