--- a/lightboxes/styles.css
+++ b/lightboxes/styles.css
@@ -27,3 +27,39 @@ a img {
   width: 360px;
   height: 360px;
 }
+
+.modal-background {
+  background-color: rgba(14, 14, 14, 0.9);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-close {
+  position: fixed;
+  top: 16px;
+  right: 16px;
+  padding: 16px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.modal-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 760px;
+  width: 90%;
+}
+
+.modal {
+  display: none;
+}
+
+
+
+
+
