--- a/coding-bootcamp-testimonials-slider-master/styles.css
+++ b/coding-bootcamp-testimonials-slider-master/styles.css
@@ -10,7 +10,7 @@
   /* --light-gray-blue: hsl(210, 46%, 95%); */
 
   /* font */
-  --desktop-body-copy: 32px;
+  --desktop-body-copy: 24px;
   --desktop-body-user: 16px;
   --mobile-body-copy: 18px;
   --mobile-body-user: 13px;
@@ -29,7 +29,36 @@ body {
   color: var(--dark-blue);
 }
 
-.testimonial-user {
+.testimonial-1,
+.testimonial-2 {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin: 40px 24px;
+}
+
+.testimonial-container,
+.testimonial-user-img {
+  grid-row: 1 / 2;
+  align-self: center;
+
+} 
+
+/* .testimonial-container,
+.testimonial-user-img {
+  width: 50%;
+} */
+
+.testimonial-container {
+  grid-column: 1 / 5;
+  z-index: 2;
+}
+
+.testimonial-user-img {
+  grid-column: 3 / -1;
+  z-index: 1;
+}
+
+.testimonial-user-name {
   font-size: var(--desktop-body-user);
   font-weight: 700;
   color: var(--dark-blue);
@@ -40,5 +69,6 @@ body {
   font-size: var(--desktop-body-user);
   font-weight: 700;
   color: var(--gray-blue);
-
+  margin-left: 8px;
 }
+
