--- a/coding-bootcamp-testimonials-slider-master/styles.css
+++ b/coding-bootcamp-testimonials-slider-master/styles.css
@@ -33,7 +33,8 @@ body {
 .testimonial-2 {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  margin: 40px 100px;
+  margin: 40px auto;
+  width: 820px;
 }
 
 .testimonial-container,
@@ -60,6 +61,7 @@ body {
 .testimonial-user-img {
   grid-column: 3 / -1;
   z-index: 1;
+  position: relative;;
 }
 
 .testimonial-user-name {
@@ -76,3 +78,8 @@ body {
   margin-left: 8px;
 }
 
+.slider-btns {
+  position: absolute;
+  bottom: -2%;
+  left: 7%;
+}
