--- a/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/styles.css
@@ -11,15 +11,19 @@ font-family: 'Lexend Deca', sans-serif; */
   --h1: 64px;
   --h2: 42px;
   --h3: 32px;
+  --h4: 24px;
   --body-size: 16px;
 
   /* color */
   --dark-blue: hsl(233, 47%, 7%);
   --card-bg-color: hsl(244, 38%, 16%);
+  --transparent-white-1: hsla(0, 0%, 100%, 0.75);
+  --transparent-white-2:  hsla(0, 0%, 100%, 0.6);
   --accent: hsl(277, 64%, 61%);
-
+ 
   /* spacing */
   --main-spacing: 64px;
+  --large-spacing: 48px;
   --medium-spacing: 32px;
   --small-spacing: 16px;
   --gap-spacing: 40px;
@@ -35,6 +39,7 @@ font-family: 'Lexend Deca', sans-serif; */
 
 body {
   font-family: var(--body-font);
+  line-height: 1.2;
   background-color:rgba(0, 0, 0, 0.966);
   color: white;
   margin: 180px 0;
@@ -51,10 +56,36 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 440px;
-  padding: 48px;
+  width: 500px;
+  padding: 0 48px;
   background-color: #1b1f3e;
+}
+
+.card-content h3 {
+  font-size: var(--h3);
+  padding-top: var(--large-spacing);
+  padding-bottom: var(--small-spacing);
+}
+
+.card-content h3 span {
+  color: var(--accent);
+}
+
+.card-content p {
+  padding-bottom: var(--medium-spacing);
+  line-height: 1.6;
+  color: var(--transparent-white-1);
+}
+
+.card-image {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(282deg 100% 38% / 41%);
 }
 
 .card-stats {
@@ -63,9 +94,18 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding-top: var(--medium-spacing);
 }
 
 .card-image img {
   /* height: 200px; */
-  width: 440px;
+  width: 500px;
+}
+
+.card-stat h4 {
+  font-size: var(--h4);
+}
+
+.card-stat p {
+  color: var(--transparent-white-2);
 }
