--- a/tip-calculator-app-main/styles.css
+++ b/tip-calculator-app-main/styles.css
@@ -34,3 +34,28 @@ body {
   background-color: var(--light-grayish-cyan);
   font-family: var(--space-mono);
 }
+
+.container-card {
+  border: red solid 1px;
+  padding: 10px;
+}
+
+.container-form {
+  border: blue solid 1px;
+  padding: 10px;
+}
+
+.container-tip {
+  border: purple solid 1px;
+  padding: 10px;
+}
+
+.container-results {
+  border: green solid 1px;
+  padding: 10px;
+}
+
+.container-amount {
+  border: orange solid 1px;
+  padding: 10px;
+}
