--- a/tip-calculator-app-main/styles.css
+++ b/tip-calculator-app-main/styles.css
@@ -17,9 +17,9 @@
 
   /* neutral color */
   --very-dark-cyan: hsl(183, 100%, 15%);
-  --dark-grayish-cyan: hsl(186, 14%, 43%);
+  /* --dark-grayish-cyan: hsl(186, 14%, 43%); */
   --dark-grayish-cyan: hsl(184, 14%, 56%);
-  --light-grayish-cyan: hsl(185, 41%, 84%);
+  /* --light-grayish-cyan: hsl(185, 41%, 84%); */
   --light-grayish-cyan: hsl(189, 41%, 97%);
   --white: hsl(0, 0%, 100%);
 
@@ -35,6 +35,14 @@ body {
   font-family: var(--space-mono);
 }
 
+header {
+  margin: 4rem 0;
+  text-align: center;
+  font-size: 36px;
+  color: var(--dark-grayish-cyan);
+  font-weight: 700;
+}
+
 .container-card {
   border: red solid 1px;
   padding: 10px;
@@ -48,6 +56,12 @@ body {
 .container-tip {
   border: purple solid 1px;
   padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container-tip a {
+  width: 33.333%;
 }
 
 .container-results {
@@ -58,4 +72,10 @@ body {
 .container-amount {
   border: orange solid 1px;
   padding: 10px;
+}
+
+input[type="text"] {
+  border: none;
+  text-align: right;
+  font-weight: 700;
 }
