--- a/poke-sprites/styles.css
+++ b/poke-sprites/styles.css
@@ -1,6 +1,55 @@
+@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@200;400;600;700;800&display=swap");
+
+/* font-family: 'Mukta', sans-serif; */
+
+:root {
+  --mukta: "Mukta", sans-serif;
+}
+
 body {
+  font-family: var(--mukta);
   background-color: rgb(35, 35, 35);
   color: whitesmoke;
+}
+
+.container {
+  text-align: center;
+  margin: 8% 4%;
+}
+
+.container label {
+  font-size: 64px;
+}
+
+#poke-form {
+  margin-top: 2%;
+}
+
+#btn {
+  display: inline-block;
+  background-color: rgb(230, 244, 139);
+  padding: 0.35em 1.2em;
+  border: 0.1em solid #ffffff;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 300;
+  color: #333;
+  text-align: center;
+  transition: all 0.2s;
+}
+
+#btn:hover {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+@media all and (max-width: 30em) {
+  #btn {
+    display: block;
+    margin: 0.4em auto;
+  }
 }
 
 .pokemon-container {
