--- a/poke-sprites/styles.css
+++ b/poke-sprites/styles.css
@@ -26,7 +26,7 @@ h1 {
   margin-top: 2%;
 }
 
-#btn {
+button {
   display: inline-block;
   background-color: rgb(230, 244, 139);
   padding: 0.35em 1.2em;
@@ -41,13 +41,13 @@ h1 {
   transition: all 0.2s;
 }
 
-#btn:hover {
+button:hover {
   color: #000000;
   background-color: #ffffff;
 }
 
 @media all and (max-width: 30em) {
-  #btn {
+  button {
     display: block;
     margin: 0.4em auto;
   }
