--- a/rock-paper-scissors/styles.css
+++ b/rock-paper-scissors/styles.css
@@ -1,5 +1,7 @@
 section {
-  margin: 8% 0;
+  margin-top: 8%;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   max-width: 1200px;
 }
@@ -11,4 +13,15 @@ section {
 
 .player-container {
   padding: 2%;
+}
+
+a {
+  text-decoration: none;
+}
+
+#player-choices div a {
+  font-size: 3rem;
+  display: inline-block;
+  margin-top: 8%;
+  margin-left: 16px;
 }
