styled computer selection and used emoji for computer choices

--- a/rock-paper-scissors/styles.css
+++ b/rock-paper-scissors/styles.css
@@ -25,3 +25,10 @@ a {
   margin-top: 8%;
   margin-left: 16px;
 }
+
+#computer-selection {
+  font-size: 3rem;
+  display: inline-block;
+  margin-top: 8%;
+  margin-left: 16px;
+}
