--- a/odinform/styles.css
+++ b/odinform/styles.css
@@ -1,3 +1,32 @@
 body {
   background-color: lightgrey;
 }
+
+.wrapper {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 40% 60%;
+  height: 100vh;
+}
+
+.logo {
+  margin-top: 200px;
+  background-color: #000000b3;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.left {
+  background-image: url(https://images.unsplash.com/photo-1530543591690-29750de55028?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
